# infyro

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/infyro_api/: errors.py  main.py  security.py
apps/api/infyro_api/routes/: agents.py  alerts.py  auth.py  catalog.py  settings.py
apps/api/infyro_api/services/: auth_service.py
backend/: .env.example  README.md  SETUP.md  TELEGRAM_SETUP.md  WHATSAPP_SETUP.md  package-lock.json  package.json
backend/migrations/: 001_initial.sql  002_whatsapp.sql  003_feedback.sql  004_telegram.sql  005_byok.sql
backend/src/: config.ts  index.ts  supabase.ts
backend/src/agent/: groq.ts  historyBudget.ts  llm.ts  orchestrator.ts  prompts.ts  routeModel.ts  sink.ts
backend/src/db/: activityLog.ts  agentSettings.ts  conversations.ts  feedback.ts  googleTokens.ts  llmKeys.ts  telegram.ts  whatsapp.ts
backend/src/google/: client.ts  tokenRefresh.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  feedback.ts  settings.ts  telegramSettings.ts  telegramWebhook.ts  whatsappSettings.ts  (+1 more)
docs/: DEPLOY.md  user-experience-flow.puml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  vite.config.ts
frontend/src/: App.jsx  index.css  routeTree.gen.ts  styles.css
runtimes/hermes/: config.yaml  runtime.py
runtimes/openclaw/: market_worker.py  openclaw.json
scripts/: doctor.sh  migrate.sh  render-runtime-configs.sh  seed.sh  start-all.sh
tests/: test_auth_helpers.py
(+64 files in other folders)
