[project]
name = "infyro"
version = "0.1.0"
description = "Every market, one thread."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "infyro-db",
  "infyro-api",
  "finance-tools-mcp",
  "market-yahoo-mcp",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
  "httpx>=0.27",
]

[tool.uv.workspace]
members = [
  "packages/db",
  "packages/finance_tools_mcp",
  "packages/market_yahoo_mcp",
  "apps/api",
]

[tool.uv.sources]
infyro-db = { workspace = true }
infyro-api = { workspace = true }
finance-tools-mcp = { workspace = true }
market-yahoo-mcp = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
