[project]
name = "infyro-api"
version = "0.1.0"
description = "Infyro FastAPI — auth, agents, catalog, alerts, settings"
requires-python = ">=3.11"
dependencies = [
  "infyro-db",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-jose[cryptography]>=3.3",
  "cryptography>=43.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
]

[project.scripts]
infyro-api = "infyro_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infyro_api"]
